--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/address-forms/bc-address/bc-address.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/address-forms/bc-address/bc-address.component.html
@@ -148,7 +148,7 @@
         <p *ngFor="let s of suggestions">{{s}}</p>
       </div>-->
 
-      <mat-form-field appearance="outline" *ngIf="isCanadaPostValidated=='false'">
+      <mat-form-field appearance="outline" *ngIf="isCanadaPostValidated==='false'">
       <mat-label>City</mat-label>
       <input type="text"
              placeholder="Select City"
@@ -173,7 +173,7 @@
       </mat-autocomplete>
     </mat-form-field>
 
-      <mat-form-field appearance="outline"  *ngIf="isCanadaPostValidated!='false'">
+      <mat-form-field appearance="outline"  *ngIf="isCanadaPostValidated!=='false'">
         <mat-label>City</mat-label>
         <input
           maxlength="100"
@@ -283,7 +283,7 @@
     </div>
   </div>
 
-  <div id="divAddressMatchResponse" [style]="isCanadaPostValidated =='false' ? 'color: red' : 'color: green'">
+  <div id="divAddressMatchResponse" [style]="isCanadaPostValidated ==='false' ? 'color: red' : 'color: green'">
     {{addressMatchResponse}}
   </div>
 
