--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/clean-up-log/clean-up-log.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/clean-up-log/clean-up-log.component.html
@@ -117,7 +117,7 @@
                 <br /><br/>
               </div>
 
-              <div  *ngIf="cleanUpWorkDataSource.getValue().length == 0 && vieworedit == 'viewOnly'">
+              <div  *ngIf="cleanUpWorkDataSource.getValue().length == 0 && vieworedit === 'viewOnly'">
                 <br />No cleanup logs were added.<br/>
               </div>
 
