--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-property-address/damaged-property-address.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-property-address/damaged-property-address.component.html
@@ -28,7 +28,7 @@
                 {{ profileAddress?.city }}&nbsp;{{profileAddress?.stateProvince}}&nbsp;{{ profileAddress?.postalCode }}<br /><br/>
               </div>
               <mat-radio-button value=false>No</mat-radio-button>
-              <div class="row radio-extra-label" *ngIf="damagedPropertyAddressForm.get('isPrimaryAndDamagedAddressSame').value == 'false'">
+              <div class="row radio-extra-label" *ngIf="damagedPropertyAddressForm.get('isPrimaryAndDamagedAddressSame').value === 'false'">
                 <app-bc-address
                   [addressForm]="damagedPropertyAddressForm"
                   [primaryAddressWarning]="false"
@@ -66,9 +66,9 @@
               aria-label="Select an option">
               <mat-radio-button value=true>Yes</mat-radio-button>&nbsp;&nbsp;<mat-radio-button value=false>No</mat-radio-button>
             </mat-radio-group>
-            <div *ngIf="damagedPropertyAddressForm.get('occupyAsPrimaryResidence').value != 'false'">
+            <div *ngIf="damagedPropertyAddressForm.get('occupyAsPrimaryResidence').value !== 'false'">
             </div>
-            <div class="row radio-extra-label" *ngIf="damagedPropertyAddressForm.get('occupyAsPrimaryResidence').value == 'false'">
+            <div class="row radio-extra-label" *ngIf="damagedPropertyAddressForm.get('occupyAsPrimaryResidence').value === 'false'">
               You must have occupied the property as your principal residence at the time of te event to be eligible for DFA. <br/>
               You may call us to discuss further at 1-888-257-4777.<br/>
             </div>
@@ -265,7 +265,7 @@
         </div>
 
         <!-- TODO: drop down list from ERA -->
-        <div class="row" style="padding-top: 24px;" *ngIf="damagedPropertyAddressForm.get('onAFirstNationsReserve').value == 'true'">
+        <div class="row" style="padding-top: 24px;" *ngIf="damagedPropertyAddressForm.get('onAFirstNationsReserve').value === 'true'">
           <div class="col-md-6 bottomspace">
             <mat-form-field appearance="outline">
               <mat-label>Name of First Nations Reserve</mat-label>
@@ -274,7 +274,7 @@
                 matInput
                 [readonly]="isReadOnly == true"
                 placeholder="Name of First Nations Reserve"
-                [required]="damagedPropertyAddressForm.get('onAFirstNationsReserve').value == 'true'"
+                [required]="damagedPropertyAddressForm.get('onAFirstNationsReserve').value === 'true'"
                 maxlength="100"/>
               <mat-hint>Maximum length is 100 characters</mat-hint>
               <mat-error
@@ -299,7 +299,7 @@
           </div>
         </div>
 
-        <div *ngIf="damagedPropertyAddressForm.get('onAFirstNationsReserve').value != 'true'">
+        <div *ngIf="damagedPropertyAddressForm.get('onAFirstNationsReserve').value !== 'true'">
           
         </div>
 
